src/test/deca/context/invalid/class/24_methodBodyIncorrect.deca
/* Description:
    test invalide avec une méthode
    (la méthode renvoie un type non attendu)



    Historique:
      cree le 18/01/2020
*/

   class A {
    int y;

    void M (){
      return this.y;
    }


 }
